.archive/kubernetes/litmus/litmus/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chaos-center
  namespace: litmus
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - 'chaos-center.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: litmus-frontend-service
          port: 9091
          weight: 100
